src/App.css
/*
 
Colors
#3b1362 - Midnight Blue
#28c1ba - Light Sea Green
#c19de5 - Medium Purple
#433960 - Dark Slate Blue
#6b56d0 - Slate Blue

*/

.main {
  position: relative;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  width: 100vw;
  height: 100vh;
}


.main div:last-child {
  margin-left: auto;
}

.logo {

  position: absolute;
  margin: 50px;
  height: 150px;
  width: 150px;
  

}

.logo img {
  width: 150px;
  transition: all 400ms ease-in-out;
}

.lab {
  position: absolute;
  bottom: 0;
  right: 0;
  transition: all 300ms ease-in-out;
}

.menu a {
  text-decoration: none;
  color: white;
  margin: 1em;
  margin-top: 2em;
}

/* Position and sizing of burger button */
.bm-burger-button {
  position: fixed;
  width: 36px;
  height: 30px;
  right: 50px;
  top: 50px;
}

/* Color/shape of burger icon bars */
.bm-burger-bars {
  background: #28c1ba;
}

/* Position and sizing of clickable cross button */
.bm-cross-button {
  height: 24px;
  width: 24px;
}

/* Color/shape of close button cross */
.bm-cross {
  background: white;
}

/* General sidebar styles */
.bm-menu {
  background: #28c1ba;
  padding: 2.5em 1.5em 0;
  font-size: 1.15em;
}

/* Morph shape necessary with bubble or elastic */
.bm-morph-shape {
  fill: #373a47;
}

/* Wrapper for item list */
.bm-item-list {
  color: #b8b7ad;
  padding: 0.8em;
}

/* Styling of overlay */
.bm-overlay {
  height: 100vh;
  background: rgba(0, 0, 0, 0.8);
}

/* .nav {
  position: fixed;
  right: 0;
  width: 10em;
  height: 10em;
  
  margin-top : 2.5em;
}

.nav li {
  cursor: pointer;
  top: 0;
  padding: 10px;
  list-style-type: none;
  
}

.nav a {
  text-decoration: none;
  color: white;
} */

.mission {
  position: relative;
  box-sizing: border-box;
  margin: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.mission div {
  text-align: center;
  margin: 50px;
  padding-top: 20px;
  padding-bottom: 0px;
  width: 100%;

  
}

.mission img {
  position: absolute;
  left: 0;
  top: -260px;
  z-index: -1;
}



.mission p, .mission h1 {
  text-align: left;
  float: right;
  width: 50%;
  margin: 0;
  padding: 15px;
  margin-right: 70px;
}

.fader {
  position: absolute;
  height: 40px;
  width: 100vw;
  bottom: -50px;
  left: -50px;
  margin: 0;
  padding: 0;
  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(64,45,90) 100%);
}

.research {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  width: 100vw;
  height: 70vh;
  font-size: 1em;
  background: #6b56d0;
  box-shadow: 0px 0px 50px 20px rgba(0,0,0,0.3);
  z-index: 2;
  
}

.research h1 {
  text-align: center;
  width: 100vw;
  
}

.research p {
  width: 50vw;
  margin: 0;
  padding: 15px;
}


.works {
  position: relative;
  margin: 0;
  margin-top: 40px;
  padding: 0;
  width: 100vw;
  height: 100vh;
  
}

.works-content {
  padding-top: 100px;
}

.ckba-logo-outer {

  position: absolute;
  right: 0px;
  top: 50px;
  width: 40%;
  padding: 0;
  margin-right: 40px;
}

.works img {
  width: 110%;
}

.works-content h1,.works-content h2, .works-content h4 {
  width: 50vw;
  text-align: center;
  padding-left: 50px;
}

.works-content h4{
  color: #c19de5;
}

.works-content p {
  text-align: left;
  margin: 0;
  padding-left: 50px;
  width: 50vw;
}

.team-outer {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  text-align: center;
  width: 100vw;
  height: 100vh;
}

.team-outer h1 {

  padding-top: 30px;
  font-size: 2em;
}

.team-outer h2 {
  padding-top: 20px;
  font-size: 2em;
}

.team {
  display: flex;
  justify-content: space-around;
  box-sizing: border-box;
  margin-top: 30px;
  padding: 0;
  width: 100vw;

}

.team-2 {
  display: flex;
  justify-content: space-around;
  box-sizing: border-box;
  margin-top: 50px;
  padding: 0;
  width: 100vw;
}



.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 200px;
  height: 200px;

}



.card p:nth-child(3) {
  margin: 0px;
  line-height: 1em;
}

.clip {
  -webkit-clip-path: circle(75px);
  clip-path: circle(75px);  
}


.partners {
  display: flex;
  align-items: center;
  justify-content: space-around;
  width: 100vw;
  margin: 0;
  padding: 0;
}

.partners-outer {
  text-align: center;
}

.partners-outer h1{
  padding: 30px;
}

.join-outer {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  width: 100vw;
}

.join {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  width: 60vw;
  height: 30vh;
  
}

/* Media Queries */

@media only screen and (max-width: 768px){
  
  .logo {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100vw;
    height: 100vh;
    margin: 0;
  }
  
  .logo img{
  
    width: 200px;
  }

  .lab {
    opacity: 0;
  }

  .mission {
    position: relative;
    height: 100vh;
    width: 100vw;
    margin: 0;
    padding: 0;
  }

  .mission h1 {
    float: left;
    text-align: left;
    padding-left: 25px;
  }

  .mission p {
    width: 90vw;
    margin: 0;
    margin-top: 40px;
  }

  .mission div {
    margin: 0;
    width: 100%;
  }

  .mission img{
    position: absolute;
    top: 170px;
    left: 0px;
    width: 768px;
  }

  .fader {
    margin: 0;
    padding: 0;
    bottom: 0;
    left: 0;
  }

  .research p{
    width: 90vw;
  }

  .works {
    margin: 0;
    padding: 20px;
  }

  .works-content {
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: left;
    justify-content: left;
    left: 0px;
    padding: 0px;
  }


  .works-content h1,.works-content h2, .works-content h4 {
    width: 50vw;
    text-align: left;
    padding-left: 15px;
  }

  .works-content p {
    width: 90vw;
    padding-left: 15px
    
  }

  .ckba-logo-outer {

    float: right;
    top: 40px;
    right: 50px;
    padding: 0;
    margin: 0;
    width: 200px;
  }

  .works img {
  }

  .team-outer h1 {
    padding: 0;
    margin-top: 50px;
  }

  .team {
    text-align: left;
    display: flex;
    align-items: flex-end;
    justify-content: space-around;
    margin-top: 40px;
    margin-left: 0;
  }

  .team div {
    transition: all 300ms ease-in-out;
    height: 50px;
    width: 50px;
  }

  .team-2 {
    text-align: left;
    margin-top: 200px;
  }

  .clip {
  -webkit-clip-path: circle(40px);
  clip-path: circle(40px);  
  }

  .card img {

    flex-wrap: wrap;
    padding-top: 0;
    margin-top: 0;
    width: 100px;
  }

  .join-outer {
    height: 100vh;
  }


  .partners {
    flex-wrap: wrap;
  }


}

